@@ -9,5 +9,7 @@ Request		| Meaning	| Reply
 -- - - - - - - -+ - - - - - - - + - - - - - - - - - - - -
  8		| ask pic NN	| c1 08 NN 00 01 00 03 00
 -- - - - - - - -+ - - - - - - - + - - - - - - - - - - - -
+ 9		| erase 	| c1 09 00 00 01 00 03 00
+-- - - - - - - -+ - - - - - - - + - - - - - - - - - - - -
  b		| get jpg Header| c1 0b 03 00 03 00 6f 02
 -- - - - - - - -+ - - - - - - - + - - - - - - - - - - - -
